# geombench

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/geombench/: geomrand.h
src/: geomrand.cpp  objio.cpp  objio.h
